<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fi.natroutter.baudbound</groupId>
	<artifactId>baudbound</artifactId>
	<version>1.1.1</version>

	<packaging>jar</packaging>

	<name>BaudBound</name>
	<description>
		BaudBound listens to a serial port and fires configurable actions whenever incoming data matches your conditions. Hook up any serial device — a microcontroller, a barcode scanner, a custom sensor — and turn its output into webhooks, launched programs, opened URLs, or simulated keystrokes.
	</description>
	<url>https://github.com/NATroutter/BaudBound</url>

	<distributionManagement>
		<repository>
			<id>repo.nat.gg</id>
			<url>https://repo.nat.gg/releases</url>
		</repository>
	</distributionManagement>

	<developers>
		<developer>
			<id>0</id>
			<name>NATroutter</name>
			<email>contact@natroutter.fi</email>
			<url>https://natroutter.fi</url>
			<roles>
				<role>Lead Developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>${groupId}.BaudBound</mainClass>
		<maven.build.timestamp.format>M-d-yyyy</maven.build.timestamp.format>
		<lwjgl.version>3.3.6</lwjgl.version>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>

			<!-- Maven source plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>


				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Maven javadoc plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<finalName>BaudBound</finalName>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.RSA</exclude>
								<exclude>META-INF/*.DSA</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>${mainClass}</mainClass>
						</transformer>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>natroutter-releases</id>
			<name>NATroutter's Repository</name>
			<url>https://repo.nat.gg/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>fi.natroutter</groupId>
			<artifactId>foxlib</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.spair</groupId>
			<artifactId>imgui-java-app</artifactId>
			<version>1.90.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.15.4</version>
		</dependency>
		<dependency>
			<groupId>com.fazecast</groupId>
			<artifactId>jSerialComm</artifactId>
			<version>2.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.26</version>
			<scope>compile</scope>
		</dependency>


		<!-- Base dependency (no classifier) -->
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>

		<!-- Natives — one block per OS/arch combo -->
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows</classifier>        <!-- Windows x86_64 -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-x86</classifier>   <!-- Windows 32-bit -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-arm64</classifier> <!-- Windows ARM -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos</classifier>         <!-- macOS Intel -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos-arm64</classifier>   <!-- macOS Apple Silicon -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux</classifier>         <!-- Linux x86_64 -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm64</classifier>   <!-- Linux ARM64 (your Pi) -->
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm32</classifier>   <!-- Linux ARM32 -->
		</dependency>

		<!-- lwjgl-glfw base + natives -->
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-x86</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm32</classifier>
		</dependency>

		<!-- lwjgl-opengl base + natives -->
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-x86</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm64</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux-arm32</classifier>
		</dependency>
	</dependencies>

</project>